# prodigi-demo

./: .pre-commit-config.yaml  AGENT.md  README.md  dev-up.sh  docker-compose.prod.yml  docker-compose.yml  prod-up.sh  pyproject.toml
nginx/: nginx.conf
prodigius/: Dockerfile  Dockerfile.prod  requirements.txt
prodigius/apps/politics/: README.md  admin.py  apps.py  models.py  urls.py  utils.py  views.py
prodigius/apps/politics/migrations/: 0001_initial.py  0002_testsubmission.py  0003_alter_choice_label.py
prodigius/apps/politics/templates/politics/: base.html  index.html  take.html
prodigius/apps/politics/templates/politics/partials/: index_features.html  index_hero.html  index_howitworks.html  result.html  result_actions.html  result_chart.html  result_coords.html  result_figures.html  result_header.html  take_form.html  take_header.html  take_result.html  take_script.html  take_submit.html
prodigius/apps/politics/tests/: test_index_view.py  test_score_view.py  test_scoring.py  test_take_view.py
prodigius/config/: asgi.py  settings.py  urls.py  wsgi.py
prodigius/static/css/: styles.css
tailwind/: package-lock.json  package.json  tailwind.config.js
